2012-04-11  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 25544-1
	- Remove obsolete patches (for older versions)
	- Fix to show icon path in boinc.desktop
	- Silently sync boinc 7.0.25

2012-01-11  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 25025-1
	- Add '--libs' option to the pkg-config gtk+-2.0

2011-12-03  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 24725-1
	- Drop unnecessary patches for trunk
	* PKGBUILD: Cleanup

2011-10-01  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 24240-1
	- Apply patches for r24240 to avoid failing build.

2011-09-16  ponsfoot  <cabezon dot hashimoto at gmail dot com>

	* boinc-svn 24224-1
	- Adopt on AUR
