@@ -13,7 +13,7 @@ _svntrunk="http://boinc.berkeley.edu/svn/${_root}/${_mod}"
 _svnmod="${_mod}"
 
 pkgname=boinc-svn
-pkgver=25544
+pkgver=25805
 pkgrel=1
 arch=('i686' 'x86_64')
 url="http://boinc.berkeley.edu/"
@@ -53,12 +53,21 @@ build() {
   cd "${srcdir}/${_svnmod}-build"
 
   if [[ "$_apply_patch" = "yes" ]]; then
+    # prevent unnecessary changes in compile flags
+    sed -i -e 's:BOINC_SET_COMPILE_FLAGS::' configure.ac
+    # build fails if set -D_FORTIFY_SOURCE=2
     patch -p1 -i "${srcdir}/r24240-ignore_ret_value.patch"
+
+    if [[ "$_mod" = "boinc_core_release_7_0_25" ]]; then
+      # build fails if automake >=1.12
+      sed -i -e 's:AC_PROG_CC:&\nAC_PROG_OBJCXX:' configure.ac
+    fi
   fi
 
-  _pc="`pkg-config --cflags --libs gtk+-2.0` -lX11"
+  _pc="`pkg-config --cflags gtk+-2.0`"
   CFLAGS+=" $_pc"
   CXXFLAGS+=" $_pc"
+  LDFLAGS+=" `pkg-config --libs gtk+-2.0` -lX11"
 
   #configure
   LC_ALL=C ./_autosetup # Possibility to fail ver. check depending on the localization.
@@ -85,7 +94,7 @@ package() {
   install -D -m755 "${srcdir}/boinc.rc" ${pkgdir}/etc/rc.d/boinc
 
   #install bash-completion
-  install -D -m644 "${srcdir}/boinc.bash" ${pkgdir}/etc/bash_completion.d/boinc
+  install -D -m644 "${srcdir}/boinc.bash" ${pkgdir}/usr/share/bash_completion.d/boinc
 
   #install .desktop File
   install -D -m644 "${srcdir}/boinc.desktop" \
