@@ -5,7 +5,7 @@
 
 pkgname=lib32-systemd-tools
 pkgver=185
-pkgrel=2
+pkgrel=3
 arch=('x86_64')
 pkgdesc="The userspace dev tools (udev) (32-bit)"
 url="http://www.freedesktop.org/wiki/Software/systemd"
@@ -13,6 +13,8 @@ license=('GPL')
 options=(!libtool)
 depends=('lib32-glib2')
 makedepends=('gcc-multilib' 'gperf' 'lib32-kmod' 'lib32-util-linux')
+provides=('lib32-udev')
+conflicts=('lib32-udev')
 source=("http://www.freedesktop.org/software/systemd/systemd-$pkgver.tar.xz"
         '0001-Reinstate-TIMEOUT-handling.patch')
 
