@@ -6,7 +6,7 @@
 # Maintainer: Ner0
 
 pkgname=vala-devel
-pkgver=0.17.1
+pkgver=0.17.2
 pkgrel=1
 pkgdesc="Compiler for the GObject type system (development release)"
 arch=('i686' 'x86_64')
@@ -18,7 +18,7 @@ options=('!libtool')
 provides=("vala=${pkgver}")
 conflicts=('vala')
 source=("http://ftp.gnome.org/pub/gnome/sources/${pkgname%-*}/${pkgver%.*}/${pkgname%-*}-${pkgver}.tar.xz")
-sha256sums=('e4af511d4b64c0b98339756359ff570bc3d2139f441fcfb8ffd7c1672053f9af')
+sha256sums=('03beff415c0de40ce1cd586a67ae13e11582b03dbd8966e32161e6ca1bd02226')
 
 build() {
     cd "${srcdir}/${pkgname%-*}-${pkgver}"
