@@ -1,3 +1,14 @@
+2012-06-27  ponsfoot  <cabezon dot hashimoto at gmail dot com>
+
+	* boinc-svn 25803-1
+	- Fix failing build boinc 7.0.25 with automake >= 1.12 (by Gentoo)
+	- Prevent unnecessary changes in compile flags (by Gentoo)
+
+2012-04-21  ponsfoot  <cabezon dot hashimoto at gmail dot com>
+
+	* boinc-svn 25544-1
+	- Fix bash completion
+
 2012-04-11  ponsfoot  <cabezon dot hashimoto at gmail dot com>
 
 	* boinc-svn 25544-1
